// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterTimeframe > matches snapshot 1`] = `
<div>
  <div
    data-testid="filter-root"
  >
    <div
      data-testid="filter-header"
    >
      Timeframe
    </div>
    <ul
      data-testid="filter-list"
    >
      <li
        data-selected="true"
        data-testid="filter-item"
      >
        <span
          data-testid="filter-icon"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-star"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
            />
          </svg>
        </span>
        <span
          data-testid="filter-label"
        >
          Today
        </span>
      </li>
      <li
        data-selected="false"
        data-testid="filter-item"
      >
        <span
          data-testid="filter-icon"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-calendar-range"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
            <path
              d="M16 2v3"
            />
            <path
              d="M3 9h18"
            />
            <path
              d="M8 2v3"
            />
            <path
              d="M17 13h-6"
            />
            <path
              d="M13 17H7"
            />
            <path
              d="M7 13h.01"
            />
            <path
              d="M17 17h.01"
            />
          </svg>
        </span>
        <span
          data-testid="filter-label"
        >
          This Week
        </span>
      </li>
      <li
        data-selected="false"
        data-testid="filter-item"
      >
        <span
          data-testid="filter-icon"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-calendar"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v3"
            />
            <path
              d="M16 2v3"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
            <path
              d="M3 9h18"
            />
          </svg>
        </span>
        <span
          data-testid="filter-label"
        >
          This Month
        </span>
      </li>
      <li
        data-selected="false"
        data-testid="filter-item"
      >
        <span
          data-testid="filter-icon"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-clock"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M12 6v6l4 2"
            />
          </svg>
        </span>
        <span
          data-testid="filter-label"
        >
          All Time
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`HotFeedDrawer > matches snapshot 1`] = `
<div>
  <div
    class="flex flex-col gap-6"
  >
    <div
      data-selected-tab="following"
      data-testid="filter-reach"
    >
      FilterReach
    </div>
    <div
      data-testid="filter-root"
    >
      <div
        data-testid="filter-header"
      >
        Timeframe
      </div>
      <ul
        data-testid="filter-list"
      >
        <li
          data-selected="true"
          data-testid="filter-item"
        >
          <span
            data-testid="filter-icon"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-star"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
          </span>
          <span
            data-testid="filter-label"
          >
            Today
          </span>
        </li>
        <li
          data-selected="false"
          data-testid="filter-item"
        >
          <span
            data-testid="filter-icon"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-calendar-range"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
              <path
                d="M16 2v3"
              />
              <path
                d="M3 9h18"
              />
              <path
                d="M8 2v3"
              />
              <path
                d="M17 13h-6"
              />
              <path
                d="M13 17H7"
              />
              <path
                d="M7 13h.01"
              />
              <path
                d="M17 17h.01"
              />
            </svg>
          </span>
          <span
            data-testid="filter-label"
          >
            This Week
          </span>
        </li>
        <li
          data-selected="false"
          data-testid="filter-item"
        >
          <span
            data-testid="filter-icon"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-calendar"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2v3"
              />
              <path
                d="M16 2v3"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
              <path
                d="M3 9h18"
              />
            </svg>
          </span>
          <span
            data-testid="filter-label"
          >
            This Month
          </span>
        </li>
        <li
          data-selected="false"
          data-testid="filter-item"
        >
          <span
            data-testid="filter-icon"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 6v6l4 2"
              />
            </svg>
          </span>
          <span
            data-testid="filter-label"
          >
            All Time
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`HotFeedSidebar > matches snapshot 1`] = `
<div>
  <div
    data-selected-tab="following"
    data-testid="filter-reach"
  >
    FilterReach
  </div>
  <div
    class="sticky top-[100px] w-full self-start"
  >
    <div
      data-testid="filter-root"
    >
      <div
        data-testid="filter-header"
      >
        Timeframe
      </div>
      <ul
        data-testid="filter-list"
      >
        <li
          data-selected="true"
          data-testid="filter-item"
        >
          <span
            data-testid="filter-icon"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-star"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
          </span>
          <span
            data-testid="filter-label"
          >
            Today
          </span>
        </li>
        <li
          data-selected="false"
          data-testid="filter-item"
        >
          <span
            data-testid="filter-icon"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-calendar-range"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
              <path
                d="M16 2v3"
              />
              <path
                d="M3 9h18"
              />
              <path
                d="M8 2v3"
              />
              <path
                d="M17 13h-6"
              />
              <path
                d="M13 17H7"
              />
              <path
                d="M7 13h.01"
              />
              <path
                d="M17 17h.01"
              />
            </svg>
          </span>
          <span
            data-testid="filter-label"
          >
            This Week
          </span>
        </li>
        <li
          data-selected="false"
          data-testid="filter-item"
        >
          <span
            data-testid="filter-icon"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-calendar"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2v3"
              />
              <path
                d="M16 2v3"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
              <path
                d="M3 9h18"
              />
            </svg>
          </span>
          <span
            data-testid="filter-label"
          >
            This Month
          </span>
        </li>
        <li
          data-selected="false"
          data-testid="filter-item"
        >
          <span
            data-testid="filter-icon"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-clock"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 6v6l4 2"
              />
            </svg>
          </span>
          <span
            data-testid="filter-label"
          >
            All Time
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
